Shrink-wrap ListSelect border https://github.com/elicit-experiment/frontend/issues/34

--- a/source/application/Style/listSelect.scss
+++ b/source/application/Style/listSelect.scss
@@ -5,6 +5,7 @@
 	padding: 8px 8px 4px 8px;
 	border: var(--bs-border-width) solid var(--bs-border-color);
 	border-radius: 6px;
+	margin: auto;
 
 	.TagContainer {
 		overflow-y: hidden; /* Important for smooth transitions */
@@ -21,7 +22,7 @@
 
 			list-style: none;
 			padding: 0;
-			margin: 0 auto;
+			margin: 0;
 			transition: transform 0.3s ease-in-out; /* Smooth vertical transition */
 
 			position: relative;
